Add user-task relationship, update API & services
